Fix alignment in sidebar

--- a/packages/app/src/components/common/TextInput.module.css
+++ b/packages/app/src/components/common/TextInput.module.css
@@ -4,7 +4,7 @@
 }
 
 .label {
-  flex: 0 0 100px;
+  flex: 0 0 90px;
   line-height: 28px;
   height: 20px;
   font-size: 0.8em;
